[package]
name = "mcap-videoify"
version = "0.0.0"
edition = "2021"

[dependencies]
openh264 = "0.4.1"
image = "0.24.6"
mcap = "0.17.0"
anyhow = "1.0.75"
camino = "1.1.6"
memmap = "0.7.0"
serde_rosmsg = "0.2.0"
tokio = "1.45.1"
minimp4 = "0.1.2"

[dependencies.roslibrust]
git = "https://github.com/lucasw/roslibrust"
branch = "get_rx_msg_def_v0_12"
features = ["ros1"]

[dependencies.roslibrust_util]
git = "https://github.com/lucasw/tf_roslibrust"
version = "0.2.0"

[dependencies.tf_roslibrust]
git = "https://github.com/lucasw/tf_roslibrust"
version = "0.2.5"

[[bin]]
name = "mcap_convert_compressed_to_h264"
path = "src/main.rs"

[[bin]]
name = "h264_to_image"
path = "src/bin/h264_to_image.rs"
